--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <script data-require="angular.js@1.5.0" data-semver="1.5.0" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.js"></script>
 <link data-require="bootstrap@3.3.1" data-semver="3.3.1" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
 <script src="./client.js"></script>
+<link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
 <body ng-app='mainApp' ng-controller='mainCtrl' class="container" style="background: linear-gradient(to bottom, white, #DADADA); background: no-repeat">
 
